第3章: 基本的な画面の流れを作成

--- a/03_MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/Storyboard/Base.lproj/Category.storyboard
+++ b/03_MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/Storyboard/Base.lproj/Category.storyboard
@@ -14,13 +14,35 @@
                     <view key="view" contentMode="scaleToFill" id="A6t-fG-hwH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mNi-MX-kg8">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="W1e-2I-gr0">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="mNi-MX-kg8" firstAttribute="top" secondItem="A6t-fG-hwH" secondAttribute="top" id="2Gb-wJ-vx8"/>
+                            <constraint firstAttribute="bottom" secondItem="mNi-MX-kg8" secondAttribute="bottom" id="M7i-ul-fww"/>
+                            <constraint firstItem="Xh6-3k-9Hd" firstAttribute="trailing" secondItem="mNi-MX-kg8" secondAttribute="trailing" id="XBl-sD-Dn5"/>
+                            <constraint firstItem="mNi-MX-kg8" firstAttribute="leading" secondItem="Xh6-3k-9Hd" secondAttribute="leading" id="nKE-yj-ZxQ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Xh6-3k-9Hd"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="mNi-MX-kg8" id="xEh-Fh-4cZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hX3-On-IWT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="45" y="101"/>
+            <point key="canvasLocation" x="44" y="100.29985007496252"/>
         </scene>
     </scenes>
 </document>
