--- a/03_MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/View/MainNavigationTitleView/MainNavigationTitleView.xib
+++ b/03_MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/View/MainNavigationTitleView/MainNavigationTitleView.xib
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ArticleNavigationTitleView" customModule="MosaicPhotoGalleryLayouts" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainNavigationTitleView" customModule="MosaicPhotoGalleryLayouts" customModuleProvider="target">
             <connections>
-                <outlet property="articleNavigationPageControl" destination="LwJ-0h-Qfq" id="6n8-FN-kD2"/>
-                <outlet property="articleNavigationTitleLabel" destination="Pf6-6f-cSU" id="xLG-lA-JYG"/>
+                <outlet property="mainNavigationPageControl" destination="LwJ-0h-Qfq" id="Vag-PX-gBd"/>
+                <outlet property="mainNavigationTitleLabel" destination="Pf6-6f-cSU" id="X9l-fZ-ivM"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
