--- a/03_MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/Storyboard/Main/Base.lproj/MainCategory.storyboard
+++ b/03_MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/Storyboard/Main/Base.lproj/MainCategory.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Category View Controller-->
+        <!--Main Category View Controller-->
         <scene sceneID="NOD-Ag-ss1">
             <objects>
-                <viewController id="F60-3U-G8H" customClass="CategoryViewController" customModule="MosaicPhotoGalleryLayouts" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="F60-3U-G8H" customClass="MainCategoryViewController" customModule="MosaicPhotoGalleryLayouts" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="A6t-fG-hwH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
