--- a/03_MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/View/ArticleListTableViewCell/ArticleListTableViewCell.xib
+++ b/03_MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/View/ArticleListTableViewCell/ArticleListTableViewCell.xib
@@ -9,27 +9,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="144" id="KGk-i7-Jjw" customClass="ArticleListTableViewCell" customModule="MosaicPhotoGalleryLayouts" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="140"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ArticleListTableViewCell" customModule="MosaicPhotoGalleryLayouts" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="154"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="140"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="154"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトルが入ります。" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q2e-iG-Zg1">
-                        <rect key="frame" x="12" y="12" width="296" height="13"/>
-                        <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="13"/>
+                        <rect key="frame" x="12" y="12" width="296" height="18"/>
+                        <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="概要が入ります。" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S8D-As-j5u">
-                        <rect key="frame" x="12" y="37" width="296" height="12"/>
-                        <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="12"/>
+                        <rect key="frame" x="12" y="42" width="296" height="16.5"/>
+                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
                         <color key="textColor" red="0.30588235289999999" green="0.30588235289999999" blue="0.30588235289999999" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="yUC-75-8Ty">
-                        <rect key="frame" x="12" y="61" width="296" height="18"/>
+                        <rect key="frame" x="12" y="70.5" width="296" height="18"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Published" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qA6-MD-g7P">
                                 <rect key="frame" x="0.0" y="0.0" width="84" height="18"/>
@@ -38,7 +38,7 @@
                                     <constraint firstAttribute="height" constant="18" id="09f-SX-Teb"/>
                                     <constraint firstAttribute="width" constant="84" id="4hH-9A-2n8"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="10"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="10"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -48,7 +48,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="18" id="pgx-Q7-ay1"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="10"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="10"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -59,7 +59,7 @@
                         </constraints>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="nOj-Uv-sKX">
-                        <rect key="frame" x="12" y="87" width="296" height="18"/>
+                        <rect key="frame" x="12" y="96.5" width="296" height="18"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mIC-YR-UlK">
                                 <rect key="frame" x="0.0" y="0.0" width="84" height="18"/>
@@ -68,7 +68,7 @@
                                     <constraint firstAttribute="height" constant="18" id="Tit-Mn-yzo"/>
                                     <constraint firstAttribute="width" constant="84" id="iEl-6d-Gni"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="10"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="10"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -78,7 +78,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="18" id="PDj-5Q-UfG"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="10"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="10"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -90,8 +90,8 @@
                         </constraints>
                     </stackView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="注意文言が入ります。" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDa-MN-1Ye">
-                        <rect key="frame" x="12" y="117" width="296" height="11"/>
-                        <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="11"/>
+                        <rect key="frame" x="12" y="126.5" width="296" height="15.5"/>
+                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="11"/>
                         <color key="textColor" white="0.5038884132753424" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -102,11 +102,11 @@
                     <constraint firstItem="nOj-Uv-sKX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="9l4-vg-IUP"/>
                     <constraint firstItem="yUC-75-8Ty" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="GGu-GL-USm"/>
                     <constraint firstItem="Q2e-iG-Zg1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="ICs-iK-ail"/>
+                    <constraint firstAttribute="bottom" secondItem="wDa-MN-1Ye" secondAttribute="bottom" constant="12" id="J7G-c0-IT6"/>
                     <constraint firstAttribute="trailing" secondItem="Q2e-iG-Zg1" secondAttribute="trailing" constant="12" id="JiQ-Tt-A93"/>
                     <constraint firstItem="Q2e-iG-Zg1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="KBg-Ho-e8Y"/>
                     <constraint firstItem="S8D-As-j5u" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="Mm7-i6-Pyh"/>
                     <constraint firstItem="yUC-75-8Ty" firstAttribute="top" secondItem="S8D-As-j5u" secondAttribute="bottom" constant="12" id="OyK-yG-isy"/>
-                    <constraint firstAttribute="bottom" secondItem="wDa-MN-1Ye" secondAttribute="bottom" constant="12" id="Sfe-kv-4V4"/>
                     <constraint firstAttribute="trailing" secondItem="nOj-Uv-sKX" secondAttribute="trailing" constant="12" id="Sv9-58-gIj"/>
                     <constraint firstAttribute="trailing" secondItem="yUC-75-8Ty" secondAttribute="trailing" constant="12" id="SyW-Wa-q1U"/>
                     <constraint firstItem="wDa-MN-1Ye" firstAttribute="top" secondItem="nOj-Uv-sKX" secondAttribute="bottom" constant="12" id="Zpx-eP-qYe"/>
